--- a/PURE HTML/persona/contact.html
+++ b/PURE HTML/persona/contact.html
@@ -12,9 +12,10 @@
     <p>9842345678</p>
     <p>funnyminersastro@gmail.com</p>
     <form action="index.html">
-        <label for="Your Name"></label>
+        <label for="Your Name">Namae?</label>
         <input type="text" name="" id="">
         <input type="color" name="" id="">
+        <label for="Like to grt updates?">Like to get updates?</label>
      <input type="submit" name="" id="">   
     </form>
     <p><a href="persona.html">Go Back</a></p>
