--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,6 @@
         <label for="Like to grt updates?">Like to get updates?</label>
      <input type="submit" name="" id="">   
     </form>
-    <p><a href="persona.html">Go Back</a></p>
+    <p><a href="index.html">Go Back</a></p>
 </body>
 </html>
