--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </ul>
     <hr>
     <ol type="1">
-        <li><a href="persona.html"> Persona </a><em>(This website)</em></li>
+        <li><a href="index.html"> Persona </a><em>(This website)</em></li>
         <li>Null</li>
         <li>Null</li>
         <li>And nothing else...</li>
