--- a/contact.html
+++ b/contact.html
@@ -11,11 +11,15 @@
     <p>My Address</p>
     <p>9842345678</p>
     <p>funnyminersastro@gmail.com</p>
-    <form action="index.html">
-        <label for="Your Name">Namae?</label>
-        <input type="text" name="" id="">
-        <input type="color" name="" id="">
-        <label for="Like to grt updates?">Like to get updates?</label>
+    <form action="mailto:funnyminersastro@gmail.com">
+        <label for="Your Name">Your Name:</label>
+        <input type="text" name="" id=""><br>
+        <label for="Your Email">Your Email</label>
+        <input type="email" name="" id=""><br>
+        <label for="Your Message">Your Message:</label><br>
+        <textarea name="Message" id="" cols="30" rows="10"></textarea><br>
+        <label for="Like to get updates?">Like to get updates?</label>
+        <input type="checkbox" name="" id="">
      <input type="submit" name="" id="">   
     </form>
     <p><a href="index.html">Go Back</a></p>
