--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <td> <img src="reglal.jfif" alt="Regal profile pic"></td>
             <td><h1>Regal Adhikari</h1>
                 <p><em><strong>Games Developer at <a href="https://play.google.com/store/apps/developer?id=Regatrix+Labs"> Regatrix Labs</a></strong>.</em></p>
-                <p>I develop PC, Android and iOS games. I love making makes but unfortunately I'm here creating websites :(.</p>
+                <p>I develop PC, Android and iOS games. I love making games but unfortunately I'm here creating websites :(.</p>
             </td>
         </tr>
     </table>
