Form passes message now

--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
     <p>My Address</p>
     <p>9842345678</p>
     <p>funnyminersastro@gmail.com</p>
-    <form action="mailto:funnyminersastro@gmail.com">
+    <form action="mailto:funnyminersastro@gmail.com" method="post" enctype="text">
         <label for="Your Name">Your Name:</label>
         <input type="text" name="" id=""><br>
         <label for="Your Email">Your Email</label>
