--- a/index.html
+++ b/index.html
@@ -5,8 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Regal</title>
+    <style>
+        body{
+            background-color: #E6F6F6;
+        }
+        hr{
+            border-style: dotted none none none;
+            border-color: grey;
+            border-width: 5px;
+            height: 0px;
+            width: 10%;
+        }
+    </style>
 </head>
-<body style="background-color: #EAF6F6;">
+<body>
     <table cellspacing="20">
         <tr>
             <td> <img src="reglal.jfif" alt="Regal profile pic"></td>
