--- a/contact.html
+++ b/contact.html
@@ -5,17 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
+    <link rel="stylesheet" href="style.css">
    
 </head>
 <body>
-    <h1>My Contact Details</h1>
+    <h1 class="titleclass">My Contact Details</h1>
     <p>My Address</p>
     <p>9842345678</p>
     <p>funnyminersastro@gmail.com</p>
     <form action="mailto:funnyminersastro@gmail.com" method="post" enctype="text">
-        <label for="Your Name">Your Name:</label>
+        <label class="l1" for="Your Name">Your Name:</label>
         <input type="text" name="" id=""><br>
-        <label for="Your Email">Your Email</label>
+        <label class="l1" for="Your Email">Your Email</label>
         <input type="email" name="" id=""><br>
         <label for="Your Message">Your Message:</label><br>
         <textarea name="Message" id="" cols="30" rows="10"></textarea><br>
