--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Regal</title>
     <link rel="stylesheet" href="master.css">
+    <link rel="icon" href="favicon.ico?v=2">
     <style>
        
     </style>
@@ -14,7 +15,7 @@
     <table cellspacing="20">
         <tr>
             <td> <img src="reglal.jfif" alt="Regal profile pic"></td>
-            <td><h1>Regal Adhikari</h1>
+            <td><h1 class="Regal">Regal Adhikari</h1>
                 <p><em><strong>Games Developer at <a href="https://play.google.com/store/apps/developer?id=Regatrix+Labs"> Regatrix Labs</a></strong>.</em></p>
                 <p>I develop PC, Android and iOS games. I love making games but unfortunately I'm here creating websites :(.</p>
             </td>
